Getting somewhere.